src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/mulOne.sbsc
1 * "hello";

return false;